# lmcode

./: .gitattributes  .gitignore  LICENSE  PATCH-FORK.md  README.md
ci/: prova.swift
clean/: CMakeCache.txt  CTestTestfile.cmake  DartConfiguration.tcl  Makefile  cmake_install.cmake  compile_commands.json
clean/common/: Makefile  build-info.cpp  cmake_install.cmake
clean/examples/: CTestTestfile.cmake  Makefile  cmake_install.cmake
clean/examples/batched/: CTestTestfile.cmake  Makefile  cmake_install.cmake
clean/examples/convert-llama2c-to-ggml/: CTestTestfile.cmake  Makefile  cmake_install.cmake
clean/examples/debug/: CTestTestfile.cmake  Makefile  cmake_install.cmake
clean/examples/diffusion/: CTestTestfile.cmake  Makefile  cmake_install.cmake
clean/examples/embedding/: CTestTestfile.cmake  Makefile  cmake_install.cmake
clean/ggml/: Makefile  cmake_install.cmake  ggml-config.cmake
clean/pocs/: CTestTestfile.cmake  Makefile  cmake_install.cmake
clean/src/: Makefile  cmake_install.cmake
clean/tests/: CTestTestfile.cmake  Makefile  cmake_install.cmake
clean/tools/: CTestTestfile.cmake  Makefile  cmake_install.cmake
common/: arg.cpp  common.h
tools/cli/: .aider.chat.history.md  .aider.input.history  CMakeLists.txt  README-tool-support.md  README.md  cli-stats.cpp  cli-stats.h  cli-tool-exec.cpp  cli-tool-exec.h  cli-tool-parser.cpp  cli-tool-parser.h  cli-tool.cpp  cli-tool.h  cli.cpp  cli_tui.cpp  cli_tui.h  llama-cli-tools.gbnf  output_buffer.cpp  output_buffer.h  task_manager.cpp  task_manager.h
tools/server/: server-context.cpp
(+121 files in other folders)
